# funbox-test-task

./: .gitignore  Makefile  my_api.py  pyproject.toml  settings.py
